Update DTOs which are returned by AuthController and BookController