@@ -1,7 +1,6 @@
-package com.mycompany.online_shop_backend.service;
+package com.mycompany.online_shop_backend.services;
 
-import com.mycompany.online_shop_backend.dto.response.GetBookByIdResponseDto;
-import com.mycompany.online_shop_backend.dto.response.GetBooksResponseDto;
+import com.mycompany.online_shop_backend.dto.services.BookDto;
 import com.mycompany.online_shop_backend.exceptions.EntityNotFoundException;
 import com.mycompany.online_shop_backend.repositories.BookRepository;
 import lombok.RequiredArgsConstructor;
@@ -10,8 +9,6 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 
-import static java.util.stream.Collectors.toList;
-
 @Service
 @RequiredArgsConstructor
 public class BookService {
@@ -19,17 +16,17 @@ public class BookService {
     private final BookRepository bookRepository;
 
     @Transactional(readOnly = true)
-    public GetBookByIdResponseDto getById(long id) {
+    public BookDto getById(long id) {
         return bookRepository.findById(id)
-                .map(GetBookByIdResponseDto::toDto)
+                .map(BookDto::toDto)
                 .orElseThrow(() -> new EntityNotFoundException("Book with id = " + id + " is not found"));
     }
 
     @Transactional(readOnly = true)
-    public List<GetBooksResponseDto> getAllBooks() {
+    public List<BookDto> getAllBooks() {
         return bookRepository.findAll()
                 .stream()
-                .map(GetBooksResponseDto::toDto)
-                .collect(toList());
+                .map(BookDto::toDto)
+                .toList();
     }
 }
